--- a/GameCalculator/GameCalculator/Pages/Index.razor
+++ b/GameCalculator/GameCalculator/Pages/Index.razor
@@ -1,9 +1,35 @@
 ﻿@page "/"
+@using GameCalculatorLibrary.BLL
+@using GameCalculatorLibrary.Models
+
+@inject GameServices _services
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>yo</h1>
 
-Welcome to your new app.
+@foreach(var game in gameList)
+{
+    <div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+        <h2>@game.GameName</h2>
+        <p>@game.MaximumEnergyCap</p>
+        <p>@game.MinutesPerEnergy</p>
+        <p>@game.ID</p>
+    </div>
+}
+
+
+
+@code {
+    public List<Game> gameList = new List<Game>();
+
+
+    protected override void OnInitialized()
+    {
+        gameList = _services.PopulateGameList();
+    }
+
+
+
+}
