--- a/GameCalculator/GameCalculator/Pages/Index.razor
+++ b/GameCalculator/GameCalculator/Pages/Index.razor
@@ -7,37 +7,37 @@
 
 <PageTitle>@currentGameName</PageTitle>
 
-<div class="">
+<div class="container-fluid">
 
-    <div class="">
-        <div class="card-title">
+    <div class="m-5">
+        <div class="text-center">
             <h2>@currentGameName</h2>
         </div>
     </div>
 
 
-    <div class="">
+    <div class="row m-auto">
 
-        <div class="row">
-            <div class="col">
-                <select class="form-select" @bind="currentGameId" @onclick="() => UpdateCurrentGame()">
-                    <option selected value="0">Select a Game...</option>
-                    @foreach (var game in gameList)
-                    {
-                    <option value="@game.ID">@game.GameName</option>
-                    }
-                </select>
-            </div>
+        <div class="col-sm-10 col-md-7 col-lg-6 m-auto">
+            <select class="form-select " @bind="currentGameId" @onclick="() => UpdateCurrentGame()">
+                <option selected value="0">Select a Game...</option>
+                @foreach (var game in gameList)
+                {
+                <option value="@game.ID">@game.GameName</option>
+                }
+            </select>
+        </div>
+           
+        <div class="w-100"></div>
+
+        <div class="col-sm-10 col-md-7 col-lg-6 m-auto mt-4">
+            <input type="text" class="form-control inputplaceholder" @bind="currentEnergyAmount" placeholder="Current Energy Amount" />
         </div>
 
-        <div class="row mt-2 g-3">
-            <div class="col">
-                <input type="text" class="form-control" @bind="currentEnergyAmount" placeholder="Current Energy Amount" />
-            </div>
-        </div>
+        <div class="w-100"></div>
 
-        <div class="mt-3">
-            <button @onclick="() => CalculateTimeToReplenish(currentEnergyAmount)">Calculate</button>
+        <div class="col-sm-10 col-md-7 col-lg-7 m-auto text-center mt-4">
+            <button class="btn btn-danger" @onclick="() => CalculateTimeToReplenish(currentEnergyAmount)">Calculate</button>
         </div>
 
         @if (HasError)
