--- a/GameCalculator/GameCalculator/Shared/NavMenu.razor
+++ b/GameCalculator/GameCalculator/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="home-brand" href="">Gacha Game Calculator</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+@*         <a class="home-brand" href="">Gacha Game Calculator</a>
+ *@        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
