--- a/GameCalculator/GameCalculator/Pages/Index.razor
+++ b/GameCalculator/GameCalculator/Pages/Index.razor
@@ -7,64 +7,70 @@
 
 <PageTitle>@currentGameName</PageTitle>
 
-<div class="container-fluid">
-
-    <div class="m-5">
-        <div class="text-center">
-            <h2>@currentGameName</h2>
-        </div>
-    </div>
-
-
-    <div class="row m-auto">
-
-        <div class="col-sm-10 col-md-7 col-lg-6 m-auto">
-            <select class="form-select " @bind="currentGameId" @onclick="() => UpdateCurrentGame()">
-                <option selected value="0">Select a Game...</option>
-                @foreach (var game in gameList)
-                {
-                <option value="@game.ID">@game.GameName</option>
-                }
-            </select>
-        </div>
-           
-        <div class="w-100"></div>
-
-        <div class="col-sm-10 col-md-7 col-lg-6 m-auto mt-4">
-            <input type="text" class="form-control inputplaceholder" @bind="currentEnergyAmount" placeholder="Current Energy Amount" />
+<div class="container-fluid shadow-lg maindiv" >
+    <div class="underdiv">
+        <div class="m-5">
+            <div class="text-center">
+                <h2 id="game-name">@currentGameName</h2>
+            </div>
         </div>
 
-        <div class="w-100"></div>
 
-        <div class="col-sm-10 col-md-7 col-lg-7 m-auto text-center mt-4">
-            <button class="btn btn-danger" @onclick="() => CalculateTimeToReplenish(currentEnergyAmount)">Calculate</button>
-        </div>
+        <div class="row m-auto">
 
-        @if (HasError)
-        {
-            <p>@errorMessage</p>
-        }
+            <div class="col-sm-10 col-md-7 col-lg-6 m-auto">
+                <select class="form-select " @bind="currentGameId" @onclick="() => UpdateCurrentGame()">
+                    <option selected value="0">Select a Game...</option>
+                    @foreach (var game in gameList)
+                    {
+                    <option value="@game.ID">@game.GameName</option>
+                    }
+                </select>
+            </div>           
 
-        <div>
-            @if (timeSpan != zeroTimeSpan && futureTime != timeThatItDefaultsToWithoutAValue)
+            <div class="w-100"></div>
+
+            <div class="col-sm-10 col-md-7 col-lg-6 m-auto mt-4">
+                <input type="text" class="form-control inputplaceholder" @bind="currentEnergyAmount" placeholder="Current Energy Amount" />
+            </div>
+
+            <div class="w-100"></div>
+
+            <div class="col-sm-10 col-md-7 col-lg-7 m-auto text-center mt-4">
+                <button class="btn btn-danger" @onclick="() => CalculateTimeToReplenish(currentEnergyAmount)">Calculate</button>
+            </div>
+
+            @if (HasError)
             {
-                //if equal to full
-                @if (isEnergyFull)
-                {
-                    <p>Your energy is full.</p>
-                }
-                //if not equal to full
-                else
-                {
-                    <p>@timeSpan.Hours hours and @timeSpan.Minutes minutes to full replenish.</p>
-                    <p>@futureTime</p>
-                }
+                <p>@errorMessage</p>
             }
+
+            <div class="col-sm-10 col-md-7 col-lg-6 m-auto mt-4 text-center">
+                @if (timeSpan != zeroTimeSpan && futureTime != timeThatItDefaultsToWithoutAValue)
+                {
+                    //if equal to full
+                    @if (isEnergyFull)
+                    {
+                        <p>Your energy is full.</p>
+                    }
+                    //if not equal to full
+                    else
+                    {
+                        <p>in</p>
+                        <p>@timeSpan.Hours hours and @timeSpan.Minutes minutes to full replenish,</p>
+                        <p>at</p>
+                        <p>@futureTime</p>
+                    }
+                }
+            </div>
+
         </div>
+
 
     </div>
     
 </div>
+
 
 
 @* <div>
